--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Sample ETL project structure
 
-**config** - all configuration files, like db connections, server credentials, project configurations etc. Usually in yaml
+# config - all configuration files, like db connections, server credentials, project configurations etc. Usually in yaml
 
